--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,13 +1,34 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+.traffic-light{
+    margin: auto;
+    border-radius: 25px;
+    background: black;
+    padding: 20px;
+    width: 200px;
+    height: 400px;
+}
+.red-light{
+    margin: auto;
+    border-radius: 50%;
+    background: red;
+    height: 120px;
+    width: 120px;
+}
+.yellow-light{
+    margin: auto;
+    border-radius: 50%;
+    background: yellow;
+    height: 120px;
+    width: 120px;
+}
+.green-light{
+    margin: auto;
+    border-radius: 50%;
+    background: rgb(0, 255, 64);
+    height: 120px;
+    width: 120px;
+}
+.onstate{
+    box-shadow: 0px 0px 25px rgb(255, 217, 0);
+}
